delete href test

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <a href="index2.html"><button id="btn1">First Button</button>
-        <a href="index3.html"><button id="btn2">Second Button</button>
+    <button id="btn1">First Button</button>
+    <button id="btn2">Second Button</button>
 </body>
 
 </html>
