--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
-    <button id="btn1">First Button</button>
-    <button id="btn2">Second Button</button>
+    <button id="btn1">count+</button>
+    <button id="btn2">reset</button>
+    <a id="count">Count :</a>
+    <script src="main.js"></script>
 </body>
 
 </html>
