when refresh page, count=0

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <button id="btn1">count+</button>
     <button id="btn2">reset</button>
-    <a id="count">Count :</a>
+    <a id="count">Count : 0</a>
     <script src="main.js"></script>
 </body>
 
